--- a/components/Shoping/Shoping.css
+++ b/components/Shoping/Shoping.css
@@ -30,6 +30,13 @@
     background-repeat: no-repeat;
     background-position: center center;
     background-size: contain;
-    cursor: pointer;
-    
+    cursor: pointer;   
+}
+
+.shopping__close-icon{
+    position: relative;
+    top: 0;
+    right: 0px;
+    width: 40px;
+    height: 30px;
 }
